changes to pep8 standard

--- a/templates/update.html
+++ b/templates/update.html
@@ -11,19 +11,38 @@
 <div class="container">
     <h1>Update Blog Post</h1>
 
-    <form action="{{ url_for('update', post_id=post['id']) }}" method="POST">
+    <form action="{{ url_for('update', post_id=post['id']) }}" method="post" autocomplete="off">
+
         <label for="author">Author:</label><br>
-        <input type="text" id="author" name="author" value="{{ post['author'] }}"><br>
+        <input
+            type="text"
+            id="author"
+            name="author"
+            value="{{ post['author'] }}"
+            required
+        ><br>
 
         <label for="title">Title:</label><br>
-        <input type="text" id="title" name="title" value="{{ post['title'] }}"><br>
+        <input
+            type="text"
+            id="title"
+            name="title"
+            value="{{ post['title'] }}"
+            required
+        ><br>
 
-        <label for="content">Content</label><br>
-        <input type="text" id="content" name="content" value="{{ post['content'] }}" required><br>
+        <label for="content">Content:</label><br>
+        <textarea
+            id="content"
+            name="content"
+            rows="6"
+            cols="40"
+            required
+        >{{ post['content'] }}</textarea><br>
 
         <input type="submit" value="Update">
-    </form>
 
+    </form>
 </div>
 
 </body>
