--- a/templates/add.html
+++ b/templates/add.html
@@ -11,21 +11,41 @@
 <div class="container">
     <h1>Add New Post</h1>
 
-    <form action="/add" method="post">
-        <label for="title">Title</label>
-        <input type="text" id="title" name="title" required>
+    <form action="{{ url_for('add') }}" method="post" autocomplete="off">
 
-        <label for="author">Author</label>
-        <input type="text" id="author" name="author" required>
+        <label for="title">Title:</label><br>
+        <input
+            type="text"
+            id="title"
+            name="title"
+            placeholder="Enter post title"
+            required
+        ><br>
 
-        <label for="content">Content</label>
-        <textarea id="content" name="content" required></textarea>
+        <label for="author">Author:</label><br>
+        <input
+            type="text"
+            id="author"
+            name="author"
+            placeholder="Enter your name"
+            required
+        ><br>
+
+        <label for="content">Content:</label><br>
+        <textarea
+            id="content"
+            name="content"
+            rows="6"
+            cols="40"
+            placeholder="Write your blog content here..."
+            required
+        ></textarea><br>
 
         <div class="button-wrapper">
-            <button type="submit">Submit</button>
+            <button type="submit">Add Post</button>
         </div>
-    </form>
 
+    </form>
 </div>
 
 </body>
